[gd_scene load_steps=15 format=3 uid="uid://868jt21kpbcw"]

[ext_resource type="Script" path="res://end.gd" id="1_7288f"]
[ext_resource type="Texture2D" uid="uid://cfwkru878x530" path="res://button1.png" id="2_6g7nv"]
[ext_resource type="Texture2D" uid="uid://bx2civiasrp3p" path="res://quit_sequence/Unbenannt.png" id="2_syblk"]
[ext_resource type="Texture2D" uid="uid://7mmh00n7pcs1" path="res://button2.png" id="3_i8oi0"]
[ext_resource type="Texture2D" uid="uid://c5fj7j4qmyv7y" path="res://quit_sequence/continue.png" id="3_jpbdk"]
[ext_resource type="Texture2D" uid="uid://btqlqapnard8q" path="res://quit_sequence/quit_fr.png" id="4_th5i7"]
[ext_resource type="Texture2D" uid="uid://kpidpceg1o12" path="res://quit_sequence/quit_fr_overlay.png" id="7_i4sw2"]
[ext_resource type="PackedScene" uid="uid://cwuh53do3r4po" path="res://ad.tscn" id="8_tghsd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_apax7"]
bg_color = Color(0, 0, 0, 0.396078)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4igjk"]

[sub_resource type="LabelSettings" id="LabelSettings_jo84h"]
font_color = Color(1, 0, 0, 1)

[sub_resource type="Animation" id="Animation_e8gd6"]
resource_name = "new_animation"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 2.4, 2.6, 2.8, 3, 3.2, 3.4, 3.6, 3.9, 4.1, 4.3, 4.5, 4.7, 4.9, 5.1, 6.3, 6.5, 6.7, 6.9, 7.1, 7.3, 7.5, 8, 8.2, 8.4, 8.6, 8.8, 9, 9.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, true, false, true, false, true, false, true, true, false, true, false, true, false, true, true, false, true, false, true, false, true, true, false, true, false, true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.11, 3.7, 3.9, 6.01, 7.6, 7.71, 9.3, 9.8, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 0),
"update": 0,
"values": [Vector2(266, 380), Vector2(266, 380), Vector2(266, 380), Vector2(266, 380), Vector2(266, 380), Vector2(266, 380), Vector2(266, 380), Vector2(266, 380), Vector2(163, 433), Vector2(266, 380)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.11, 3.7, 3.9, 6.01, 7.6, 7.71, 9.3, 9.8, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 0),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(1, 1), Vector2(1, 1), Vector2(1, 1), Vector2(1, 1), Vector2(1, 1), Vector2(1, 1), Vector2(100, 100), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.5, 2, 2.1, 3.7, 3.9, 5.4, 5.9, 6, 7.6, 7.7, 9.3, 9.8, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0),
"update": 0,
"values": [0.215953, 0.215953, -6.07375, 0.216421, 0.216421, 0.215953, 0.215953, -6.07375, 0.216421, 0.216421, 0.216421, 0.216421, -6073.75, -6.07375]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ollpg"]
_data = {
"new_animation": SubResource("Animation_e8gd6")
}

[sub_resource type="LabelSettings" id="LabelSettings_wvcos"]
font_size = 40
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_7288f")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_apax7")

[node name="high_score" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 390.0
offset_right = 453.0
offset_bottom = 430.0
bbcode_enabled = true
text = "[center][color=red][b]high score:[/b][/color] a billion!!!!!!!!![/center]"

[node name="time" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = -2.0
offset_top = 276.0
offset_right = 448.0
offset_bottom = 316.0
theme_override_styles/normal = SubResource("StyleBoxTexture_4igjk")
bbcode_enabled = true
text = "[center][color=red][b]time:[/b][/color] a billion!!!!!!!!![/center]"
scroll_active = false

[node name="score" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = -5.0
offset_top = 350.0
offset_right = 445.0
offset_bottom = 390.0
bbcode_enabled = true
text = "[center][color=red][b]score:[/b][/color] a billion!!!!!!!!![/center]"

[node name="new_high_score" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 266.0
offset_top = 380.0
offset_right = 412.002
offset_bottom = 403.0
rotation = 0.215953
pivot_offset = Vector2(74.73, 11.08)
text = "NEW HIGH SCORE!!"
label_settings = SubResource("LabelSettings_jo84h")

[node name="AnimationPlayer" type="AnimationPlayer" parent="new_high_score"]
libraries = {
"": SubResource("AnimationLibrary_ollpg")
}

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2

[node name="BoxContainer" type="BoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="cont1" type="TextureButton" parent="CenterContainer/BoxContainer"]
layout_mode = 2
action_mode = 0
texture_normal = ExtResource("2_6g7nv")

[node name="quit" type="TextureButton" parent="CenterContainer/BoxContainer"]
layout_mode = 2
action_mode = 0
texture_normal = ExtResource("3_i8oi0")

[node name="CenterContainer2" type="CenterContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="TextureRect" type="TextureRect" parent="CenterContainer2"]
layout_mode = 2
texture = ExtResource("2_syblk")

[node name="continue" type="TextureButton" parent="CenterContainer2/TextureRect"]
layout_mode = 0
offset_left = 13.0
offset_top = 482.0
offset_right = 177.0
offset_bottom = 583.0
action_mode = 0
texture_normal = ExtResource("3_jpbdk")

[node name="TextureRect" type="TextureRect" parent="CenterContainer2/TextureRect"]
layout_mode = 0
offset_left = 182.0
offset_top = 484.0
offset_right = 289.0
offset_bottom = 588.0
texture = ExtResource("4_th5i7")

[node name="quit_fr" type="LinkButton" parent="CenterContainer2/TextureRect/TextureRect"]
layout_mode = 0
offset_left = 64.0
offset_top = 80.0
offset_right = 104.0
offset_bottom = 103.0
theme_override_colors/font_color = Color(0, 0, 0, 0)
disabled = true
action_mode = 0
text = "...."
underline = 2
uri = "https://www.vkd.tj"

[node name="TextureRect" type="TextureRect" parent="CenterContainer2/TextureRect/TextureRect/quit_fr"]
layout_mode = 0
offset_left = -67.0
offset_top = -81.0
offset_right = 40.0
offset_bottom = 23.0
texture = ExtResource("7_i4sw2")

[node name="Label" type="Label" parent="CenterContainer2/TextureRect/TextureRect/quit_fr/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "30"
label_settings = SubResource("LabelSettings_wvcos")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="CenterContainer2/TextureRect/TextureRect/quit_fr"]
one_shot = true

[node name="ad" parent="." instance=ExtResource("8_tghsd")]
layout_mode = 1

[node name="ad2" parent="." instance=ExtResource("8_tghsd")]
layout_mode = 1
anchor_top = 0.87
anchor_bottom = 1.0
preset = 1

[connection signal="pressed" from="CenterContainer/BoxContainer/cont1" to="." method="_on_cont_1_pressed"]
[connection signal="pressed" from="CenterContainer/BoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CenterContainer2/TextureRect/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="CenterContainer2/TextureRect/TextureRect/quit_fr" to="." method="_on_quit_fr_pressed"]
[connection signal="timeout" from="CenterContainer2/TextureRect/TextureRect/quit_fr/Timer" to="." method="_on_timer_timeout"]
